--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -2,7 +2,7 @@
  * Place your custom CSS styles here.
  **/
 
-.fixed {
+.autopac-fixed {
     background: rgba(200, 54, 54, 0.1) !important;
 
     position: fixed !important;
