style(fill button)

--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -2,7 +2,7 @@
  * Place your custom CSS styles here.
  **/
 
-.fixed {
+.autopac-fixed-div {
     background: rgba(200, 54, 54, 0.1) !important;
 
     position: fixed !important;
@@ -13,5 +13,5 @@
     left: 50% !important;
     top: 0% !important;
     transform: translateX(-50%) !important;
-    z-index: 1000 !important;
+    z-index: 100000 !important;
 }
