--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -14,4 +14,5 @@
     top: 0% !important;
     transform: translateX(-50%) !important;
     z-index: 100000 !important;
+    pointer-events: none !important;
 }
