--- a/src/browser_action/popup.css
+++ b/src/browser_action/popup.css
@@ -1,24 +1,12 @@
 	#mainPopup {
 
-        height: 180px;
-        width: 230px;
+        height: 150px;
+        width: 200px;
         display: inline-block;
         vertical-align: middle;
         line-height: normal;
 		font-family: Helvetica, Ubuntu, Arial, sans-serif;
 	}
-    #appinfo {
-        background-color: #3f51b5;
-        border: 0;
-        color: #FFFFFF;
-        display: block;
-        font-size: 85%;
-        line-height: 1.2;
-        margin: 0;
-        padding: calc(0.1em + 1px) 0;
-        position: relative;
-        text-align: center;
-    }
 	h1 {
 		font-size: 2em;
 	}
@@ -27,4 +15,9 @@
     }
     button {
         text-align: center;
+	    width: 100%;
+    }
+    input {
+        text-align: center;
+	    width: 100%;
     }
